# realTimePlotter

./: CMakeLists.txt  README.md  SharedTable.cpp  SharedTable.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parsedatafromudp.cpp  parsedatafromudp.h  testSender.cpp
qCustomPlot/: CMakeLists.txt
